app/styles/styles.scss
@import "colors";

html {
  font-family: 'Raleway', sans-serif;
  font-size: 1rem;
  background-color: white;
}

body {
  padding: 0;
  margin: 0;
}

blockquote {
  background-color: $platinum;
  padding: 1rem;
  box-shadow: 0.2rem 0.2rem 0.4rem grey;

  >small {
    display: block;
    text-align: right;
  }
}

.title {
  text-align: center;
  font-family: 'Bungee', cursive;
  margin: 0;
  padding: 1rem;
}

.dark {
  background-color: $ruber;
  color: $claret;
}

/* Blocks */

#heading>.title {
  font-size: 3rem;
}

#content1 {
  display: flex;
  flex-direction: column;
  align-items: center;

  >p {
    max-width: 50rem;
  }
}

#content2 {
  background-color: $ruber;
  display: flex;
  flex-direction: column;
}

#content3 {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

#content3>div {
  padding: 2rem;
  padding-top: 5rem;
  text-align: center;
}

#footer {
  margin-top: 5rem;
  text-align: center;
  font-size: 0.8rem;
  padding: 1rem 2rem;
}

/* images */

#me {
  margin: 2rem;
  border-radius: 50%;
  width: 20rem;
  box-shadow: 0.2rem 0.2rem 0 $ruber, 0.4rem 0.4rem 0 $claret;
}

.react {
  display: block;
  margin: 0 auto;
  max-width: 16rem;
}

.img {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 5rem 0;
  background-size: cover;
  height: 15rem;
  box-shadow: 0.7rem 0.7rem 1rem rgba(0,0,0,0.4) inset;
}

/* misc */

@mixin block {
  box-shadow: 0.2rem 0.2rem 0.4rem rgba(0,0,0,0.4);
  border-radius: 2%;
  padding: 2rem 1rem;
  margin: 1rem 1rem;
  background-color: $platinum;
}

#built-with {
  margin-bottom: 0;
  background-color: $jet;
  color: white;

  div {
    background-color: $jet;
    max-width: 40rem;
    padding: 2rem 1rem;
    margin: 1rem 1rem;

    h3 {
      margin-top: 2rem;
    }
  }
}

.split {
  margin: 0 auto;
  max-width: 20rem;
  display: flex;
  justify-content: space-around;
}

.text-section {
  color: rgba(0,0,0,0.6);
  font-weight: 700;
  display: inline;
  padding: 0.6rem;
}

.languages {
  width: 100%;
  background-color: $jet;

  >div {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    h3 {
      text-align: center;
      margin-top: 2rem;
    }
  }
}

.center {
  text-align: center;
}

#hamburger {
  width: 2.5rem;
  height: 3rem;
  display: inline-block;
  font-size: 2.5rem;
  background-color: rgba(255,255,255,0.2);
  padding: 0 0.5rem;
  border-radius: 0.5rem;
}

#hamburger>span {
  display: block;
  transform: scaleX(1.7);
}

.column {
  flex-direction: column;
}

.item {
  margin: 3rem 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.desc {
  @include block;
  max-width: 20rem;
}

.desc-large {
  @include block;
  max-width: 40rem;
}

.grey {
  padding: 0 2rem;
  padding-bottom: 2rem;
  background-color: $platinum;
  margin-bottom: 2rem;
}

@media (min-width: 768px) {
  .grey {
    border-radius: 1%;
  }
}

